--- a/css/styles.css
+++ b/css/styles.css
@@ -14,207 +14,75 @@ a:hover { color: #bb2b0d; text-decoration: none;}
 
 /* Clears all floats and other block formats */
 
-div.clear {
-	clear               : both;
-	height              : 0px;
-	border              : 0px;
-	font-size           : 0px;
-	line-height         : 0px;
-}
+div.clear {clear: both;height: 0px;border: 0px;font-size: 0px;line-height: 0px;}
 
 /* Style for the page header */
 
-#page_header {
-  position            : fixed;
-  top                 : 0px;
-  left                : 0px;
-  width               : 100%;
-  border-bottom       : 1px solid #000000;
-  text-align          : center;
-  z-index             : 2;
-  background-color    : #ffffff;
-}
-
-#page_header h1 {
-  padding             : 1px;
-  margin              : 1px;
-}
+#page_header {position: fixed;top: 0px;left: 0px;width: 100%;border-bottom: 1px solid #000000;text-align: center;z-index: 2;background-color: #ffffff;}
+#page_header h1 {padding: 1px;margin: 1px;}
 
 /* Style for the footer  */
 
-#page_footer {
-  width               : 100%;
-  border-top          : 1px solid #000000;
-  margin-top          : 20px;
-  margin-bottom       : 10px;
-  font-size           : 10px;
-  z-index             : 1;
-}
+#page_footer { width: 100%;border-top: 1px solid #000000;margin-top: 20px;margin-bottom: 10px;font-size: 10px;z-index: 1;}
 
 /* Style for the navigation div */
 
-#page_navigation {
-  position            : fixed;
-  top                 : 40px;
-  left                : 0px;
-  width               : 140px;
-  min-height          : 400px;
-  z-index             : 2;
-  padding-left        : 2px;
-}
-
-#page_navigation fieldset {
-  border              : 1px solid #cccccc;
-}
-
-#page_navigation legend {
-  font-size           : 10px;
-  color               : #cccccc;
-}
-
-#page_navigation ul {
-  margin              : 0px;
-  padding             : 0px;
-  list-style-type     : none;
-}
-
-#page_navigation li {
-  font-weight         : normal;
-}
-
-#page_navigation li a {
-  text-decoration     : none;
-}
-
-.nav_on {
-  font-weight         : bold;
-}
+#page_navigation { position: fixed;top: 40px;left: 0px;width: 140px;min-height: 400px; z-index: 2; padding-left: 2px;background-color: #ffffff;}
+#page_navigation fieldset { border: 1px solid #cccccc;}
+#page_navigation legend { font-size: 10px; color: #cccccc;}
+#page_navigation ul { margin: 0px;padding: 0px;list-style-type: none;}
+#page_navigation li { font-weight: normal;}
+#page_navigation li a {text-decoration: none;}
+.nav_on { font-weight: bold;}
 
 /* Style for the general page content */
 
-#page_content {
-  margin-top          : 40px;
-  margin-left         : 150px;
-  min-height          : 400px;
-}
+#page_content {margin-top: 40px;margin-left: 150px;min-height: 400px;}
 
 /* Also general page content, but this time without the space for the navigation */
 
-#fullpage_content {
-  margin-top          : 40px;
-  min-height          : 400px;
-}
+#fullpage_content { margin-top: 40px; min-height: 400px;}
 
 /* All input fields */
 
-input,select {
-  font-family         : Arial, Sans-Serif;
-  font-size           : 11px;
-}
+input,select { font-family: Arial, Sans-Serif;font-size: 11px;}
 
 /* input type="button"/"submit" styles: */
 
-input[type="button"], input[type="submit"] {
-  font-family         : Arial, Sans-Serif;
-  font-size           : 11px;
-}
+input[type="button"], input[type="submit"] {font-family: Arial, Sans-Serif;font-size: 11px;}
 
 /* Add hover for buttons */
 
-input[type="button"]:hover, input[type="submit"]:hover {
-  color               : #bb2b0d;
-}
+input[type="button"]:hover, input[type="submit"]:hover { color: #bb2b0d;}
 
 /* Login mask div container */
 
-#login_mask {
-  margin-left         : auto;
-  margin-right        : auto;
-  text-align          : center;
-}
-
-#login_mask h1 {
-  margin-bottom       : 2px;
-}
+#login_mask { margin-left: auto; margin-right: auto;text-align: center;}
+#login_mask h1 {margin-bottom: 2px;}
 
 /* login mask table style */
 
-#login_mask table {
-  border              : 1px solid #dedede;
-  margin-left         : auto;
-  margin-right        : auto;
-  text-align          : left;
-}
-
-#login_error {
-  margin-top          : 10px;
-  margin-left         : auto;
-  margin-right        : auto;
-  width               : 600px;
-}
-
-a.btn, .btn {
-  font-size: 11px;
-}
+#login_mask table {border: 1px solid #dedede;margin-left: auto;margin-right: auto;text-align: left;}
+#login_error {margin-top: 10px;margin-left: auto;margin-right: auto;width: 600px;}
+a.btn, .btn {font-size: 11px;}
 
 /* Style for the InformUser() function (see functions.inc.php) */
 
-#informUser {
-  padding             : 6px;
-  margin-top          : 10px;
-  margin-bottom       : 10px;
-  min-width: 400px;
-  max-width           : 770px;
-  font-family         : Arial, Sans-Serif;
-  font-size           : 11px;
-  font-weight         : bold;
-}
+#informUser {padding: 6px;margin-top: 10px; margin-bottom: 10px;min-width: 400px;max-width: 770px;font-family: Arial, Sans-Serif;font-size: 11px;font-weight: bold;}
 
 /* Style for data tables */
 
-.datatable {
-  font-size: 12px;
-  margin-bottom: 20px;
-  border-spacing: 1px;
-}
-
-.datatable caption {
-  text-align          : left;
-  padding-bottom      : 5px;
-  font-style          : italic;
-}
-
-.datatable a {
-  text-decoration     : none;
-}
-
-.datatable th {
-  vertical-align      : bottom;
-  border-bottom       : 1px solid #000000;
-}
+.datatable {font-size: 12px;margin-bottom: 20px;border-spacing: 1px;}
+.datatable caption {text-align: left;padding-bottom: 5px;font-style: italic;}
+.datatable a {text-decoration: none;}
+.datatable th {vertical-align: bottom;border-bottom: 1px solid #000000;}
 
 /* Datatable with border: */
 
-.datatable_border {
-  font-size           : 12px;
-  margin-bottom       : 20px;
-  border              : 1px solid #cccccc;
-}
-
-.datatable_border th {
-  vertical-align      : bottom;
-  border-bottom       : 1px solid #000000;
-}
-
-.datatable_border caption {
-  text-align          : left;
-  font-style          : italic;
-  padding-left        : 1px;
-}
-
-.datatable td, .datatable_border td {
-  padding: 4px;
-}
+.datatable_border { font-size: 12px; margin-bottom: 20px; border: 1px solid #cccccc;}
+.datatable_border th {vertical-align: bottom;border-bottom: 1px solid #000000;}
+.datatable_border caption { text-align: left;font-style: italic;padding-left: 1px;}
+.datatable td, .datatable_border td { padding: 4px;}
 
 /* Standard color definitions for odd/even table rows */
 
@@ -222,7 +90,7 @@ a.btn, .btn {
 .td_odd { background-color: #EEEEEE;}
 .td_even_bold {background-color: #DDDDDD; font-weight: bold;}
 .td_odd_bold {background-color: #E0DACD;font-weight: bold;}
-.td_even:hover, .td_odd:hover {background-color: #FFFFFF;}
+.td_even:hover, .td_odd:hover {background-color: #C2F5FE;}
 
 .td_number {text-align: right;}
 
@@ -238,4 +106,3 @@ tfoot td { border-top: 1px solid black; font-weight: bold; }
 /* Definition for extension errors (from method ErrorExit()) */
 
 #EXT_ERROR { margin-top: 40px; margin-bottom: 40px; border: 1px dotted #bb0d2d; padding: 5px; font-size: 18px; color: #bb0d2d;}
-
